--- a/sass/partials/base/02-reset/_reset.sass
+++ b/sass/partials/base/02-reset/_reset.sass
@@ -41,7 +41,7 @@ body
   margin: 0
 
 a:focus
-  outline: thin dotted
+  outline: 1px solid $text-black
 
 a:hover,
 a:active
